--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Portfólio Cartográfico</title>
     <link rel="stylesheet" href="style.css">
+
+    <div class="osm-link">
+        <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">Meu OpenStreetMap</a>
+    </div>
+
+    <div class="linkedin-link">
+        <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
+            Conecte-se comigo no LinkedIn
+        </a>
+    </div>
+
 </head>
 <body>
 
@@ -34,11 +45,11 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; Patrick Rodrigues, 2023.</p>
+        <p>&copy; Paulo Patrick Rodrigues da Silva, 2025.</p>
         <p>Este portfólio é de código aberto sob a <a href="license.md" target="_blank">licença GNU GPL v3</a>. Você pode usar e modificar, desde que mantenha esta licença.</p>
 
         <div class="ai-credit">
-            <p>Este site foi criado com a assistência de inteligências artificais.</p>
+            <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
         </div>
     </footer>
 
