--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - Portfólio Cartográfico</title>
+    <title>Home - Portfólio Cartográfico</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="index.html">Sobre</a>
+        <a href="home.html">Home</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
@@ -39,7 +39,7 @@
     <!-- Conteúdo Principal -->
     <div class="container">
         <!-- Seção Sobre -->
-        <section id="sobre">
+        <section id="home">
             <h2>Sobre Mim</h2>
             <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, não busco neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
         </section>
