--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="home.html">Home</a>
+        <a href="sobre.html">Sobre</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
