--- a/sobre.html
+++ b/sobre.html
@@ -30,7 +30,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="home.html">Home</a>
+        <a href="sobre.html">Sobre</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
@@ -39,7 +39,7 @@
     <!-- Conteúdo Principal -->
     <div class="container">
         <!-- Seção Sobre -->
-        <section id="home">
+        <section id="sobre">
             <h2>Sobre Mim</h2>
             <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, não busco neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
         </section>
