--- a/contato.html
+++ b/contato.html
@@ -55,7 +55,7 @@
 
     <!-- Rodapé -->
     <footer id="footer">
-        <p>&copy; Paulo Patrick Rodrigues da Silva, 2025.</p>
+        <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
         <p>Este portfólio é de código aberto sob a <a href="license.md" target="_blank">licença GNU GPL v3</a>. Você pode usar e modificar, desde que mantenha esta licença.</p>
 
         <div class="ai-credit">
