--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <!-- Mapa do OpenStreetMap -->
-        <div id="map"></div>
+        <div id="map" class="map-container"></div>
     </div>
 
     <!-- Rodapé -->
@@ -85,7 +85,7 @@
             <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
         </div>
     </footer>
-
+    
     <!-- Vinculação ao script.js -->
     <script src="script.js"></script>
 
