--- a/contato.html
+++ b/contato.html
@@ -36,22 +36,14 @@
         <a href="contato.html">Contato</a>
     </nav>
 
-<!-- Botão para abrir/fechar o formulário -->
-<button class="toggle-form-button" onclick="toggleForm()">✉️</button>
-
-<!-- Overlay (fundo escurecido) -->
-<div class="overlay hidden" id="overlay"></div>
-
-<!-- Formulário centralizado -->
-<div class="form-container hidden" id="formContainer">
-    <h2>Fale Comigo</h2>
-    <form action="enviar.php" method="POST">
-        <input type="text" name="nome" placeholder="Seu nome" required>
-        <input type="email" name="email" placeholder="Seu e-mail" required>
-        <textarea name="mensagem" placeholder="Sua mensagem" required></textarea>
-        <button type="submit">Enviar</button>
-    </form>
-</div>
+    <div class="contact-panel">
+        <p>
+            Fale comigo pelo meu e-mail 
+            <a href="mailto:paulopatrick@proton.me">paulopatrick@proton.me</a> 
+            ou pelo aplicativo de mensagens Phiz, 
+            <a href="https://share.phiz.chat/contact?params=YXBwTGluaz1waGl6c2NoZW1lOi8vdXNlcklkPTEwMDEzOTQ0JmZyb21Vc2VySWQ9MTAwMTM5NDQmc2hhcmVUeXBlPWNvbnRhY3Q=&token=b394e3e7cd7e474a995d1f532e567cfd" target="_blank">clicando aqui</a>.
+        </p>
+    </div>
 
     <!-- Rodapé -->
     <footer id="footer">
