--- a/artigos.html
+++ b/artigos.html
@@ -71,15 +71,19 @@
         </section>
     </div>
 
-    <!-- Rodapé -->
-    <footer id="footer">
-        <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
-        <p>Este portfólio é de código aberto sob a <a href="license.md" target="_blank">licença GNU GPL v3</a>. Você pode usar e modificar, desde que mantenha esta licença.</p>
+<!-- Rodapé -->
+<footer id="footer">
+    <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
+    <p>
+        Este portfólio é de código aberto sob a 
+        <a href="license.md" target="_blank" class="license-link">licença GNU GPL v3</a>. 
+        Você pode usar e compartilhar todas as informações sem fins lucrativos, desde que dê os créditos.
+    </p>
 
-        <div class="ai-credit">
-            <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
-        </div>
-    </footer>
+    <div class="ai-credit">
+        <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
+    </div>
+</footer>
 
 </body>
 </html>
