--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         
             <!-- Menu de edições -->
             <div class="edits-menu">
-                <h3>Minhas Últimas Edições no OpenStreetMap</h3>
+                <h3>Últimas Edições</h3>
                 <ul id="edits-list"></ul>
             </div>
         </div>
