--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h1>Portfólio Cartográfico</h1>
-        <p>Bem-vindo ao meu portfólio de projetos de mapeamento e geoprocessamento!</p>
+        <h1>Portfólio Geográfico</h1>
+        <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
         <!-- Botões OpenStreetMap e LinkedIn -->
@@ -82,7 +82,7 @@
         <!-- Seção Sobre -->
         <section id="sobre">
             <h2>Sobre Mim</h2>
-            <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, não busco neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
+            <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente, focado na América Latina. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, sem neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
         </section>
 
         <section class="banner">
