--- a/contato.html
+++ b/contato.html
@@ -10,8 +10,8 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h1>Portfólio Cartográfico</h1>
-        <p>Bem-vindo ao meu portfólio de projetos de mapeamento e geoprocessamento!</p>
+        <h1>Portfólio Geográfico</h1>
+        <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
         <!-- Links flutuantes -->
