--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-
+        <!-- Selo "IA Friendly" -->
+        <div id="ia-friendly">Feito com IA</div>
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
