--- a/artigos.html
+++ b/artigos.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+        <!-- Selo "IA Friendly" -->
+        <div id="ia-friendly">IA Integrada</div>
+    <!-- Cabeçalho -->
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
