--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
         <!-- Selo "IA Friendly" -->
-        <div id="ia-friendly">Feito com IA</div>
+        <div id="ia-friendly">IA Integrada</div>
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
