--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
+           <!-- Favicon -->
+           <link rel="icon" type="image/x-icon" href="C:\Users\paulo\Documents\GitHub\Portfolio_cartografia\favicon.ico">
 </head>
 <body>
         <!-- Selo "IA Friendly" -->
