--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="C:\Users\paulo\Documents\GitHub\Portfolio_cartografia\favicon.ico">
     <style>
         #map {
             height: 400px;
