--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <title>Contato - Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
            <!-- Favicon -->
-           <link rel="icon" type="image/x-icon" href="C:\Users\paulo\Documents\GitHub\Portfolio_cartografia\favicon.ico">
+           <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
         <!-- Selo "IA Friendly" -->
