--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 
         <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="C:\Users\paulo\Documents\GitHub\Portfolio_cartografia\favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         #map {
             height: 400px;
