--- a/index.html
+++ b/index.html
@@ -9,44 +9,7 @@
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        #map {
-            height: 400px;
-            width: 100%;
-            max-width: 800px;
-            margin: 20px auto;
-            border: 2px solid #000;
-        }
 
-        .edits-menu {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        .edits-menu h3 {
-            margin-top: 0;
-        }
-
-        #edits-list {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        #edits-list li {
-            margin: 5px 0;
-        }
-
-        #edits-list a {
-            text-decoration: none;
-            color: #0078a8;
-            cursor: pointer;
-        }
-
-        #edits-list a:hover {
-            text-decoration: underline;
-        }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
@@ -88,6 +51,36 @@
             <h2>Sobre Mim</h2>
             <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente, focado na América Latina. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, sem neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
         </section>
+
+        <body>
+            <div class="container">
+                <h2>Mural de Habilidades</h2>
+                <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
+                <div class="skill">
+                    <div class="skill-name">QGIS</div>
+                    <div class="progress-bar"><div class="progress" data-progress="20">20%</div></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Python</div>
+                    <div class="progress-bar"><div class="progress" data-progress="10">10%</div></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Sensoriamento Remoto</div>
+                    <div class="progress-bar"><div class="progress" data-progress="30">30%</div></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Cartografia</div>
+                    <div class="progress-bar"><div class="progress" data-progress="40">40%</div></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Geoestatística</div>
+                    <div class="progress-bar"><div class="progress" data-progress="15">15%</div></div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Power BI</div>
+                    <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
+                </div>
+            </div>
 
         <section class="banner">
             <div class="banner-content">
