Adicionado o projeto teste

--- a/projetos.html
+++ b/projetos.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
-           <!-- Favicon -->
-           <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-        <!-- Selo "IA Friendly" -->
-        <div id="ia-friendly">IA Integrada</div>
-    <!-- Cabeçalho -->
+    <!-- Selo "IA Friendly" -->
+    <div id="ia-friendly">IA Integrada</div>
+
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
@@ -23,16 +23,12 @@
             <div class="osm-link">
                 <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">Meu OpenStreetMap</a>
             </div>
-
             <div class="linkedin-link">
                 <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
                     Conecte-se comigo no LinkedIn
                 </a>
             </div>
         </div>
-
-            <!-- Vinculação ao script.js -->
-    <script src="script.js"></script>
     </header>
 
     <!-- Menu de Navegação -->
@@ -51,40 +47,30 @@
 
             <!-- Projeto 1 -->
             <div class="project">
-                <h3>Mapa de Densidade Populacional</h3>
-                <p>Mapa que mostra a distribuição da população em uma região urbana, criado com QGIS e dados do IBGE.</p>
-                <a href="#">Ver Detalhes</a>
+                <h3>Análise de Dados Geográficos: População, IDHM e PIB</h3>
+                <p>Bem-vindo ao meu primeiro projeto de mapeamento e análise de dados geográficos utilizando o <strong>QGIS</strong>! Neste trabalho, explorei a relação entre indicadores socioeconômicos fundamentais — <strong>População</strong>, <strong>Índice de Desenvolvimento Humano Municipal (IDHM)</strong> e <strong>Produto Interno Bruto (PIB)</strong> — no Brasil.</p>
+                <p>Utilizando o <strong>QGIS</strong>, integrei dados espaciais e tabelas para criar mapas interativos que ilustram a distribuição e a correlação entre esses indicadores. Além disso, trabalhei com o <strong>Excel</strong> para organizar, filtrar e analisar os dados.</p>
+                <p>Trata-se de um estudo baseado no curso <strong>Descomplica QGIS</strong>, não finalizado, logo um projeto amostral dos conhecimentos até então adquiridos.</p>
+                <a href="Primeiro_Projeto_Livre.html">Acessar</a>
             </div>
 
-            <!-- Projeto 2 -->
-            <div class="project">
-                <h3>Mapa de Uso e Cobertura do Solo</h3>
-                <p>Análise de mudanças no uso do solo ao longo do tempo usando imagens de satélite e ArcGIS.</p>
-                <a href="#">Ver Detalhes</a>
-            </div>
-
-            <!-- Projeto 3 -->
-            <div class="project">
-                <h3>Mapa Interativo de Rotas de Ônibus</h3>
-                <p>Mapa interativo desenvolvido com Leaflet.js, mostrando rotas de transporte público em uma cidade.</p>
-                <a href="#">Ver Detalhes</a>
-            </div>
         </section>
     </div>
 
     <!-- Rodapé -->
-<footer id="footer">
-    <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
-    <p>
-        Este portfólio é de código aberto sob a 
-        <a href="license.md" target="_blank" class="license-link">licença GNU GPL v3</a>. 
-        Você pode usar e compartilhar todas as informações sem fins lucrativos, desde que dê os créditos.
-    </p>
+    <footer id="footer">
+        <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
+        <p>
+            Este portfólio é de código aberto sob a 
+            <a href="license.md" target="_blank" class="license-link">licença GNU GPL v3</a>. 
+            Você pode usar e compartilhar todas as informações sem fins lucrativos, desde que dê os créditos.
+        </p>
+        <div class="ai-credit">
+            <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
+        </div>
+    </footer>
 
-    <div class="ai-credit">
-        <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
-    </div>
-</footer>
-    
+    <!-- Vinculação ao script.js -->
+    <script src="script.js"></script>
 </body>
 </html>
