--- a/artigos.html
+++ b/artigos.html
@@ -51,26 +51,10 @@
 
             <!-- Artigo 1 -->
             <div class="article">
-                <h3>O Papel da Geografia na Sociedade Contemporânea</h3>
+                <h3>Título exemplar</h3>
                 <p class="date">Publicado em: 10 de outubro de 2023</p>
                 <p>Neste artigo, discuto como a geografia pode contribuir para a compreensão e solução de problemas sociais e ambientais no mundo atual.</p>
                 <a href="artigo1.html">Leia mais</a>
-            </div>
-
-            <!-- Artigo 2 -->
-            <div class="article">
-                <h3>Análise Espacial e Justiça Social</h3>
-                <p class="date">Publicado em: 5 de outubro de 2023</p>
-                <p>Exploro como a análise espacial pode ser usada para identificar desigualdades sociais e promover políticas públicas mais justas.</p>
-                <a href="artigo2.html">Leia mais</a>
-            </div>
-
-            <!-- Artigo 3 -->
-            <div class="article">
-                <h3>Desafios da Cartografia no Século XXI</h3>
-                <p class="date">Publicado em: 1 de outubro de 2023</p>
-                <p>Reflexões sobre os desafios e oportunidades da cartografia na era da tecnologia e da informação.</p>
-                <a href="artigo3.html">Leia mais</a>
             </div>
         </section>
     </div>
