--- a/Primeiro_Projeto_Livre.html
+++ b/Primeiro_Projeto_Livre.html
@@ -82,7 +82,7 @@
     <div class="container">
         <h1>Análise de Dados Geográficos: População, IDHM e PIB</h1>
         
-        <p>Aqui será escrito a apresentação</p>
+        <p>Este projeto não segue uma linha acadêmica, trata-se apenas de exercícios realizados livremente para demonstrar os aprendizados no curso <strong>DescomplicaQGIS</strong> até então, sendo atualizado no percorrer das aulas.</p>
 
         <!-- Botões -->
         <div>
