--- a/projetos.html
+++ b/projetos.html
@@ -48,9 +48,8 @@
             <!-- Projeto 1 -->
             <div class="project">
                 <h3>Análise de Dados Geográficos: População, IDHM e PIB</h3>
-                <p>Bem-vindo ao meu primeiro projeto de mapeamento e análise de dados geográficos utilizando o <strong>QGIS</strong>! Neste trabalho, explorei a relação entre indicadores socioeconômicos fundamentais — <strong>População</strong>, <strong>Índice de Desenvolvimento Humano Municipal (IDHM)</strong> e <strong>Produto Interno Bruto (PIB)</strong> — no Brasil.</p>
-                <p>Utilizando o <strong>QGIS</strong>, integrei dados espaciais e tabelas para criar mapas interativos que ilustram a distribuição e a correlação entre esses indicadores. Além disso, trabalhei com o <strong>Excel</strong> para organizar, filtrar e analisar os dados.</p>
-                <p>Trata-se de um estudo baseado no curso <strong>Descomplica QGIS</strong>, não finalizado, logo um projeto amostral dos conhecimentos até então adquiridos.</p>
+                <p>Bem-vindo ao meu primeiro projeto de mapeamento e análise de dados geográficos utilizando o <strong>QGIS</strong>! Aqui foi explorada a relação entre indicadores socioeconômicos fundamentais — <strong>População</strong>, <strong>Índice de Desenvolvimento Humano Municipal (IDHM)</strong> e <strong>Produto Interno Bruto (PIB)</strong> — no Brasil.</p>
+                <p>Trata-se de um estudo baseado no curso <strong>Descomplica QGIS</strong>, em andamento, logo um projeto piloto, na medida em que houver avanços nas aulas, será atualizado até que seja finalizado.</p>
                 <a href="Primeiro_Projeto_Livre.html">Acessar</a>
             </div>
 
